Serialization implementation for RuntimeType/Method/FieldHandles. Implementation of the get_Value and GetModuleHandle APIs on RuntimeTypeHandle
[tfs-changeset: 1649103]

--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2200,4 +2200,16 @@
   <data name="ThreadState_SetPriorityFailed" xml:space="preserve">
     <value>Unable to set thread priority.</value>
   </data>
+  <data name="Serialization_InvalidFieldState" xml:space="preserve">
+    <value>Object fields may not be properly initialized.</value>
+  </data>
+  <data name="RuntimeTypeHandleSer_InsufficientMetadata" xml:space="preserve">
+    <value>The RuntimeTypeHandle cannot be serialized properly due to missing reflection metadata.</value>
+  </data>
+  <data name="RuntimeMethodHandleSer_InsufficientMetadata" xml:space="preserve">
+    <value>The RuntimeMethodHandle cannot be serialized properly due to missing reflection metadata.</value>
+  </data>
+  <data name="RuntimeFieldHandleSer_InsufficientMetadata" xml:space="preserve">
+    <value>The RuntimeFieldHandle cannot be serialized properly due to missing reflection metadata.</value>
+  </data>
 </root>
