For some properties and methods in the ResourceManager API for NS 2.0 that do not make sense when working with ResW resource files, throw PlatformNotSupportedException.
[tfs-changeset: 1649724]

--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2215,4 +2215,10 @@
   <data name="RuntimeFieldHandleSer_InsufficientMetadata" xml:space="preserve">
     <value>The RuntimeFieldHandle cannot be serialized properly due to missing reflection metadata.</value>
   </data>
+  <data name="PlatformNotSupported_ResourceManager_ResWFileUnsupportedMethod" xml:space="preserve">
+    <value>ResourceManager method '{0}' is not supported when reading from .resw resource files.</value>
+  </data>
+  <data name="PlatformNotSupported_ResourceManager_ResWFileUnsupportedProperty" xml:space="preserve">
+    <value>ResourceManager property '{0}' is not supported when reading from .resw resource files.</value>
+  </data>
 </root>
