Finishes off the Misc category
Most of this is the corert side of https://github.com/dotnet/coreclr/pull/10068

Also added back three trivial members in the Misc category


Bring over the IDeserializationCallback interface
on TextInfo by copying over the CoreClr parts.

(Not adding the rest of the support to make TextInfo actually serializable -
I don't want to test all that and this goes way beyond the scope of addressing api
violations...)

--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2221,4 +2221,7 @@
   <data name="PlatformNotSupported_ResourceManager_ResWFileUnsupportedProperty" xml:space="preserve">
     <value>ResourceManager property '{0}' is not supported when reading from .resw resource files.</value>
   </data>
+  <data name="Serialization_NonSerType" xml:space="preserve">
+    <value>Type '{0}' in Assembly '{1}' is not marked as serializable.</value>
+  </data>
 </root>
