NS 2.0 fixes for System.Threading namespace
CR: JKotas, SergeyK

* Fix base classes in the System.Threading namespace (Exception -> SystemException/ApplicationException, Object -> MarshalByRefObject).
* Make WaitHandle.ToTimeoutMilliseconds method internal and remove duplicate code from Condition.cs, Lock.cs, and Monitor.cs.
* Add two missing Monitor.Wait(Object, int/TimeSpan, bool) overloads.
* Fix the issue with Monitor.TryEnter(Object obj, TimeSpan timeout) calling Lock.TryAcquire(millisecondsTimeout) instead of Monitor.TryAcquireContended.
* Copy Task.Dispose implementation from CoreCLR.

[tfs-changeset: 1650623]

--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -1549,6 +1549,9 @@
   <data name="Task_Delay_InvalidDelay" xml:space="preserve">
     <value>The value needs to translate in milliseconds to -1 (signifying an infinite timeout), 0 or a positive integer less than or equal to Int32.MaxValue.</value>
   </data>
+  <data name="Task_Dispose_NotCompleted" xml:space="preserve">
+    <value>A task may only be disposed if it is in a completion state (RanToCompletion, Faulted or Canceled).</value>
+  </data>
   <data name="Task_WaitMulti_NullTask" xml:space="preserve">
     <value>The tasks array included at least one null element.</value>
   </data>
