--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2398,4 +2398,16 @@
   <data name="CustomAttributeFormat_InvalidPropertyFail" xml:space="preserve">
     <value>'{0}' property specified was not found.</value>
   </data>
+  <data name="NotSupported_CannotCallEqualsOnSpan" xml:space="preserve">
+    <value>Equals() on Span and ReadOnlySpan is not supported. Use operator== instead.</value>
+  </data>
+  <data name="NotSupported_CannotCallGetHashCodeOnSpan" xml:space="preserve">
+    <value>GetHashCode() on Span and ReadOnlySpan is not supported.</value>
+  </data>
+  <data name="Argument_DestinationTooShort" xml:space="preserve">
+    <value>Destination is too short.</value>
+  </data>
+  <data name="Argument_InvalidTypeWithPointersNotSupported" xml:space="preserve">
+    <value>Cannot use type '{0}'. Only value types without pointers or references are supported.</value>
+  </data>
 </root>
