Port SecureString to CoreRT
This change ports the CoreCLR implementation of SecureString over to CoreRT. This was an attempt to create an almost verbatim copy of the CoreCLR SecureString, so that it may be moved to the Shared partition. There are a few differences in SecureString.Windows.cs that have not been resolved.

This required inclusion of a few more Win32 APIs: CryptProtectMemory, WideCharToMultiByte, ZeroMemory, SysAllocStringLen, and SysStringLen. This also required additions to PInvokeMarshal: AllocHGlobal, AllocCoTaskMem, FreeHGlobal, and FreeCoTaskMem. These have also been added to the internal Marshal class in Interop.manual.cs, which just calls the implementations in PInvokeMarshal.

[tfs-changeset: 1650789]

--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -693,6 +693,9 @@
   <data name="ArgumentOutOfRange_Index" xml:space="preserve">
     <value>Index was out of range. Must be non-negative and less than the size of the collection.</value>
   </data>
+  <data name="ArgumentOutOfRange_Length" xml:space="preserve">
+    <value>The specified length exceeds maximum capacity of SecureString.</value>
+  </data>
   <data name="ArgumentOutOfRange_LengthTooLarge" xml:space="preserve">
     <value>The specified length exceeds the maximum value of {0}.</value>
   </data>
@@ -869,6 +872,9 @@
   </data>
   <data name="ArgumentOutOfRange_IndexLength" xml:space="preserve">
     <value>Index and length must refer to a location within the string.</value>
+  </data>
+  <data name="ArgumentOutOfRange_IndexString" xml:space="preserve">
+    <value>Index was out of range. Must be non-negative and less than the length of the string.</value>
   </data>
   <data name="ArgumentOutOfRange_InvalidEraValue" xml:space="preserve">
     <value>Era value was not valid.</value>
