Add missing resources for porting System.Convert from coreclr (#2973)

--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2248,4 +2248,7 @@
   <data name="Serialization_NonSerType" xml:space="preserve">
     <value>Type '{0}' in Assembly '{1}' is not marked as serializable.</value>
   </data>
+  <data name="InvalidCast_DBNull" xml:space="preserve">
+    <value>Object cannot be cast to DBNull.</value>
+  </data>
 </root>
