Move MemberInfo to shared partition
There are really two easy changes here, just
to reduce CR overhead.

- CoreRt side of https://github.com/dotnet/coreclr/pull/10167

- Now that we have the shiny new IsConstructedGenericType
  api, let's use it...

--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2254,4 +2254,7 @@
   <data name="Serialization_NonSerType" xml:space="preserve">
     <value>Type '{0}' in Assembly '{1}' is not marked as serializable.</value>
   </data>
+  <data name="NotSupported_NYI" xml:space="preserve">
+    <value>This feature is not currently implemented.</value>
+  </data>
 </root>
