--- a/src/System.Private.Reflection.Core/src/Resources/Strings.resx
+++ b/src/System.Private.Reflection.Core/src/Resources/Strings.resx
@@ -334,4 +334,25 @@
   <data name="Argument_MustBeRuntimeMethodInfo" xml:space="preserve">
     <value>MethodInfo must be a runtime MethodInfo object.</value>
   </data>
+  <data name="Arg_ArrayZeroError" xml:space="preserve">
+    <value>Array must not be of length zero.</value>
+  </data>
+  <data name="Argument_MustBeRuntimeFieldInfo" xml:space="preserve">
+    <value>FieldInfo must be a runtime FieldInfo object.</value>
+  </data>
+  <data name="Argument_TypedReferenceInvalidField" xml:space="preserve">
+    <value>Field in TypedReferences cannot be static or init only.</value>
+  </data>
+  <data name="MissingMemberTypeRef" xml:space="preserve">
+    <value>FieldInfo does not match the target Type.</value>
+  </data>
+  <data name="Arg_TypeRefPrimitve" xml:space="preserve">
+    <value>TypedReferences cannot be redefined as primitives.</value>
+  </data>
+  <data name="MissingMemberNestErr" xml:space="preserve">
+    <value>TypedReference can only be made on nested value Types.</value>
+  </data>
+  <data name="Arg_TypedReference_Null" xml:space="preserve">
+    <value>The TypedReference must be initialized.</value>
+  </data>
 </root>
