Prepare DefaultBinder.cs for move to shared partition.
On the CoreRT side:

- Move to System namespace.

- Move to S.P.CoreLib so it can be shared.

- Rename CanConvertPrimitive to CanChangePrimitive
  Rename CanConvertPrimitiveObjectToType to CanChangePrimitiveObjectToType

  The CoreCLR versions of these take RuntimeType - the renamed guys
  will wrap the CoreCLR versions (which are QCalls, hence the rename to
  avoid the hassle of renaming QCall methods.)

--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2254,4 +2254,19 @@
   <data name="Delegate_GarbageCollected" xml:space="preserve">
     <value>The corresponding delegate has been garbage collected. Please make sure the delegate is still referenced by managed code when you are using the marshalled native function pointer.</value>
   </data>
+  <data name="Arg_AmbiguousMatchException" xml:space="preserve">
+    <value>Ambiguous match found.</value>
+  </data>
+  <data name="NotSupported_ChangeType" xml:space="preserve">
+    <value>ChangeType operation is not supported.</value>
+  </data>
+  <data name="Arg_EmptyArray" xml:space="preserve">
+    <value>Array may not be empty.</value>
+  </data>
+  <data name="MissingMember" xml:space="preserve">
+    <value>Member not found.</value>
+  </data>
+  <data name="MissingField" xml:space="preserve">
+    <value>Field not found.</value>
+  </data>
 </root>
