NS2.0 Add back the String constructors taking sbyte*
Ctor(sbyte*) is a port of

  COMString::StringInitCharPtr
  (https://github.com/dotnet/coreclr/blob/master/src/classlibnative/bcltype/stringnative.cpp#L98)

Ctor(sbyte*, int, int) is a port of

  COMString::StringInitCharPtrPartial
  (https://github.com/dotnet/coreclr/blob/master/src/classlibnative/bcltype/stringnative.cpp#L117)

Ctor(sbyte*, int, int, Encoding) is copied from CoreCLR

  (https://github.com/dotnet/coreclr/blob/master/src/mscorlib/src/System/String.cs#L229)

CreateStringForSByteConstructor() is a rough port of
  StringObject::StringInitCharHelper() (without the "-1" length case and other length checks)

  (https://github.com/dotnet/coreclr/blob/master/src/vm/object.cpp#L2073)

--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2311,4 +2311,10 @@
   <data name="Serialization_DateTimeTicksOutOfRange" xml:space="preserve">
     <value>Invalid serialized DateTime data. Ticks must be between DateTime.MinValue.Ticks and DateTime.MaxValue.Ticks.</value>
   </data>
+  <data name="Arg_InvalidANSIString" xml:space="preserve">
+    <value>The ANSI string passed in could not be converted from the default ANSI code page to Unicode.</value>
+  </data>
+  <data name="Arg_ExpectedNulTermination" xml:space="preserve">
+    <value>The value passed was not NUL terminated.</value>
+  </data>
 </root>
