--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2326,4 +2326,10 @@
   <data name="Arg_ExpectedNulTermination" xml:space="preserve">
     <value>The value passed was not NUL terminated.</value>
   </data>
+  <data name="PlatformNotSupported_ArgIterator" xml:space="preserve">
+    <value>ArgIterator is not supported on this platform.</value>
+  </data>
+  <data name="Arg_TypeUnloadedException" xml:space="preserve">
+    <value>Type had been unloaded.</value>
+  </data>
 </root>
