--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2332,4 +2332,7 @@
   <data name="Arg_TypeUnloadedException" xml:space="preserve">
     <value>Type had been unloaded.</value>
   </data>
+  <data name="Overflow_Currency" xml:space="preserve">
+    <value>Value was either too large or too small for a Currency.</value>
+  </data>
 </root>
