NS2.0 Complete the 3 remaining System.Exception methods.
The secure binary serialization hack from the days
where SecurityCritical actually meant something
is PNSE (following CoreCLR's lead.)

The "why does this even exist" GetType() method speaks
for itself.

TargetSite is iffy even on the full framework -
I don't think it merits work to attempt it on
CoreRT. Since diagnostic logging is the only
really defensible use of this api, returning
null is likely more useful than throwing a PNSE here.

--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2335,4 +2335,7 @@
   <data name="Overflow_Currency" xml:space="preserve">
     <value>Value was either too large or too small for a Currency.</value>
   </data>
+  <data name="PlatformNotSupported_SecureBinarySerialization" xml:space="preserve">
+    <value>Secure binary serialization is not supported on this platform.</value>
+  </data>
 </root>
