--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2398,4 +2398,7 @@
   <data name="CustomAttributeFormat_InvalidPropertyFail" xml:space="preserve">
     <value>'{0}' property specified was not found.</value>
   </data>
+  <data name="ArrayTypeMismatch_ConstrainedCopy" xml:space="preserve">
+    <value>Array.ConstrainedCopy will only work on array types that are provably compatible, without any form of boxing, unboxing, widening, or casting of each array element.  Change the array types (i.e., copy a Derived[] to a Base[]), or use a mitigation strategy in the CER for Array.Copy's less powerful reliability contract, such as cloning the array or throwing away the potentially corrupt destination array.</value>
+  </data>
 </root>
