--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -195,6 +195,9 @@
   <data name="Arg_EntryPointNotFoundException" xml:space="preserve">
     <value>Entry point was not found.</value>
   </data>
+  <data name="Arg_EntryPointNotFoundExceptionParameterized" xml:space="preserve">
+    <value>Unable to find an entry point named '{0}' in DLL '{1}'.</value>
+  </data>
   <data name="Arg_EnumIllegalVal" xml:space="preserve">
     <value>Illegal enum value: {0}.</value>
   </data>
@@ -2412,6 +2415,12 @@
   </data>
   <data name="ArrayTypeMismatch_ConstrainedCopy" xml:space="preserve">
     <value>Array.ConstrainedCopy will only work on array types that are provably compatible, without any form of boxing, unboxing, widening, or casting of each array element.  Change the array types (i.e., copy a Derived[] to a Base[]), or use a mitigation strategy in the CER for Array.Copy's less powerful reliability contract, such as cloning the array or throwing away the potentially corrupt destination array.</value>
+  </data>
+  <data name="Arg_DllNotFoundException" xml:space="preserve">
+    <value>Dll was not found.</value>
+  </data>
+  <data name="Arg_DllNotFoundExceptionParameterized" xml:space="preserve">
+    <value>Unable to load DLL '{0}': The specified module could not be found.</value>
   </data>
   <data name="WrongSizeArrayInNStruct" xml:space="preserve">
     <value>Type could not be marshaled because the length of an embedded array instance does not match the declared length in the layout.</value>
