Initial LoadLibrary Support for Pinvoke
 Change Description:
     For Pinvoke function, Currently Mcg will try to resolve its 'real' native exported function name through lib file. This add a hard dependency on Lib files to allow pinvoke works correctly
     If one of its lib file doesn't exists,
         if UseDefaultPInvoke is set, then the app may fail to launch
         if UseDefaultPInvoke isn't set, then throw exception if someone try to call this function during runtime.

     The change will to use LoadLibrary/GetProcAddress to fetch native function during runtime when passing IFS:UseLoadLibraryForPInvoke to ilc.
     Also since it isn't clear whether Windows will allow to use LoadLibrary/GetProcAddress in UWP, so add  LoadLibrary/GetProcAddress support code into Mcg Code template

     Changes:
     1. Move McgGeneratedNativeCallCodeAttribute from S.P.Interop to S.P.Corelib
         The LoadLibray/GetProcAddress support itself need to call some pinvokes(CoTaskMemAlloc/CoTaskMemFree), thus Mcg should skip these these pinvokes(CoTaskMemAlloc/CoTaskMemFree).
     2. Add IFS:UseLoadLibraryForPInvoke to enable LoadLibrary Support. By default, don't use LoadLibrary
     3. Add EntryPointNotFoundException and DllNotFoundException as wellknown type, since mcg generated code depends on these two types

     Remaining:
     1. Stdcall convention support for missing lib case

[tfs-changeset: 1655835]

--- a/src/System.Private.Interop/src/Resources/Strings.resx
+++ b/src/System.Private.Interop/src/Resources/Strings.resx
@@ -366,4 +366,13 @@
   <data name="DirectUI_Empty" xml:space="preserve">
     <value>Empty.</value>
   </data>
+  <data name="PInvoke_GetProcAddress_NoName" xml:space="preserve">
+    <value>A library name must be specified in a DllImport attribute applied to non-IJW methods.</value>
+  </data>
+  <data name="PInvoke_LoadLib" xml:space="preserve">
+    <value>Unable to load DLL '{0}': {1}</value>
+  </data>
+  <data name="PInvoke_GetProcAddress" xml:space="preserve">
+    <value>Unable to find an entry point named '{0}' in DLL '{1}'.</value>
+  </data>
 </root>
