Bring Overlapped class to CoreRT
CR: KouVel

Take the Overlapped and PinnableBufferCache classes from CoreCLR and make required changes.
For now implement ThreadPool.UnsafeQueueNativeOverlapped viaThreadPool.UnsafeQueueUserWorkItem.

[tfs-changeset: 1656791]

--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -1122,6 +1122,9 @@
   <data name="InvalidOperation_NullArray" xml:space="preserve">
     <value>The underlying array is null.</value>
   </data>
+  <data name="InvalidOperation_Overlapped_Pack" xml:space="preserve">
+    <value>Cannot pack a packed Overlapped again.</value>
+  </data>
   <data name="InvalidOperation_ReadOnly" xml:space="preserve">
     <value>Instance is read-only.</value>
   </data>
