--- a/src/ILVerify/src/Resources/Strings.resx
+++ b/src/ILVerify/src/Resources/Strings.resx
@@ -168,6 +168,9 @@
   <data name="ReadOnly" xml:space="preserve">
     <value>Missing ldelema or call following readonly prefix.</value>
   </data>
+  <data name="Rethrow" xml:space="preserve">
+    <value>Rethrow from outside a catch handler.</value>
+  </data>
   <data name="StackByRef" xml:space="preserve">
     <value>Expected ByRef on the stack.</value>
   </data>
