Fix more CoreFx on ILC tests
A bunch of one-bucket items combined into one commit
for efficiency...

- Port over new Array.Copy behavior 
    https://github.com/dotnet/coreclr/pull/11266

- Fix initial value for AssemblyName.VersionCompatibility

- Enforce the traditional restrictions on stacking ByRefs and stacking
  Pointers on ByRefs.

- Remove the restriction on GetTypeFromCLSID().MakeArrayType()
  (https://github.com/dotnet/corert/issues/3522)

- Allow IsAssignable() to take a TypeDelegator (or anything
  else that wraps a runtime type.)

--- a/src/System.Private.Reflection.Core/src/Resources/Strings.resx
+++ b/src/System.Private.Reflection.Core/src/Resources/Strings.resx
@@ -361,4 +361,10 @@
   <data name="Acc_CreateInterface" xml:space="preserve">
     <value>Cannot create an instance of an interface.</value>
   </data>
+  <data name="CannotCreateByRefOfByRef" xml:space="preserve">
+    <value>Cannot create a byref of a byref: {0}</value>
+  </data>
+  <data name="CannotCreatePointerOfByRef" xml:space="preserve">
+    <value>Cannot create a pointer to a byref: {0}</value>
+  </data>
 </root>
