Implemented ImportStoreIndirect and checking for volatile/unaligned prefix

--- a/src/ILVerify/src/Resources/Strings.resx
+++ b/src/ILVerify/src/Resources/Strings.resx
@@ -177,6 +177,9 @@
   <data name="ReadOnly" xml:space="preserve">
     <value>Missing ldelema or call following readonly prefix.</value>
   </data>
+  <data name="ReadOnlyIllegalWrite" xml:space="preserve">
+    <value>Illegal write to readonly ByRef.</value>
+  </data>
   <data name="Rethrow" xml:space="preserve">
     <value>Rethrow from outside a catch handler.</value>
   </data>
@@ -221,6 +224,12 @@
   </data>
   <data name="Unaligned" xml:space="preserve">
     <value>Missing ldind, stind, ldfld, stfld, ldobj, stobj, initblk, cpblk.</value>
+  </data>
+  <data name="UnalignedOrVolatileUnexpected" xml:space="preserve">
+    <value>Unexpected prefix unalign or volatile prefix</value>
+  </data>
+  <data name="UnalignNotAllowed" xml:space="preserve">
+    <value>Unalign not allowed for ldsfld and stsfld.</value>
   </data>
   <data name="UnrecognizedArgumentNumber" xml:space="preserve">
     <value>Unrecognized argument number.</value>
