--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2437,4 +2437,10 @@
   <data name="Arg_MarshalDirectiveException" xml:space="preserve">
     <value>Marshaling directives are invalid.</value>
   </data>
+  <data name="Arg_RegSubKeyValueAbsent" xml:space="preserve">
+    <value>No value exists with that name.</value>
+  </data>
+  <data name="Arg_RegValStrLenBug" xml:space="preserve">
+    <value>Registry value names should not be greater than 16,383 characters.</value>
+  </data>
 </root>
