[ILVerify] Implemented storeindirect + prefix checking (#3730)
* Implemented ImportStoreIndirect and checking for volatile/unaligned prefix
* Handling assignment of interface to object
* Added checks for readonly, tail and constrained prefix
* Added first tests for prefix and ldind/stind instructions
* Fixed ImportStoreIndirect assignment check
- simplified ImportStoreIndirect/ImportLoadIndirect
- also added some tests for ImportLoadIndirect

--- a/src/ILVerify/src/Resources/Strings.resx
+++ b/src/ILVerify/src/Resources/Strings.resx
@@ -177,6 +177,9 @@
   <data name="ReadOnly" xml:space="preserve">
     <value>Missing ldelema or call following readonly prefix.</value>
   </data>
+  <data name="ReadOnlyIllegalWrite" xml:space="preserve">
+    <value>Illegal write to readonly ByRef.</value>
+  </data>
   <data name="Rethrow" xml:space="preserve">
     <value>Rethrow from outside a catch handler.</value>
   </data>
