--- a/src/ILVerify/src/Resources/Strings.resx
+++ b/src/ILVerify/src/Resources/Strings.resx
@@ -174,6 +174,12 @@
   <data name="InitLocals" xml:space="preserve">
     <value>initlocals must be set for verifiable methods with one or more local variables.</value>
   </data>
+  <data name="PathStackDepth" xml:space="preserve">
+    <value>Stack depth differs depending on path.</value>
+  </data>
+  <data name="PathStackUnexpected" xml:space="preserve">
+    <value>Non-compatible types on stack depending on path.</value>
+  </data>
   <data name="ReadOnly" xml:space="preserve">
     <value>Missing ldelema or call following readonly prefix.</value>
   </data>
