--- a/src/System.Private.Reflection.Core/src/Resources/Strings.resx
+++ b/src/System.Private.Reflection.Core/src/Resources/Strings.resx
@@ -367,4 +367,7 @@
   <data name="CannotCreatePointerOfByRef" xml:space="preserve">
     <value>Cannot create a pointer to a byref: {0}</value>
   </data>
+  <data name="Arg_EnumLitValueNotFound" xml:space="preserve">
+    <value>Literal value was not found.</value>
+  </data>
 </root>
