Fix TFS 451302	Remove "new NotImplementedException" from Reflection.

--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2452,4 +2452,7 @@
   <data name="Arg_OpenType" xml:space="preserve">
     <value>Cannot create an instance of {0} as it is an open type.</value>
   </data>
+  <data name="Arg_PlatformNotSupported_AssemblyName_GetAssemblyName" xml:space="preserve">
+    <value>AssemblyName.GetAssemblyName() is not supported on this platform.</value>
+  </data>
 </root>
